--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,10 @@
+@media (max-width: 600px) {
+    body {
+        transform: scale(0.8);
+        transform-origin: top left;
+    }
+}
+
 .container {
   display: flex;
   background-color: DodgerBlue;
