--- a/assets/main.css
+++ b/assets/main.css
@@ -1,8 +1,64 @@
+
+/* Firefox */
+
+
+/* Chrome, Edge, Safari */
+::-webkit-scrollbar {
+  width: 100px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f0f0f0;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #6b6b6b;
+  border-radius: 600px;
+}
+
+
+
+
 @media (max-width: 600px) {
     body {
         transform: scale(0.8);
         transform-origin: top left;
     }
+}
+
+.newsimage {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+
+.news {
+  display: grid;
+  grid-template-columns: 1 1 1;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  gap: 20px;
+}
+.news div {
+  background-color: gray;
+  color: #000;
+  padding: 10px;
+
+}
+
+.newsheader {
+
+  font-size: 35px;
+
+}
+
+.newsphara {
+
+    font-size: 20px;
+
 }
 
 .container {
